--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.5.7",
+    "@types/amqplib": "^0.10.5",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.12",
     "eslint": "^8.57.0",
@@ -57,6 +58,7 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/session": "^7.4.1",
     "@vinejs/vine": "^2.0.0",
+    "amqplib": "^0.10.4",
     "better-sqlite3": "^11.0.0",
     "luxon": "^3.4.4",
     "reflect-metadata": "^0.2.2"
