--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@adonisjs/transmit-client": "^1.0.0",
     "@heroicons/react": "^2.1.4",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-popover": "^1.1.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
@@ -19,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
